metadata/sf-prod/force-app/main/default/objects/QC_Rule__c/QC_Rule__c.object-meta.xml
<CustomObject>
    <label>QC Rule</label>
    <nameField>
        <label>QC Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QC Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>