metadata/sf-prod/force-app/main/default/objects/QC_Rule__c/fields/Actionable_Coaching__c.field-meta.xml
<CustomField>
    <fullName>Actionable_Coaching__c</fullName>
    <inlineHelpText>What is required to pass this rule?</inlineHelpText>
    <label>Actionable Coaching</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>