metadata/sf-prod/force-app/main/default/objects/QC_Rule__c/fields/Automation_ID__c.field-meta.xml
<CustomField>
    <fullName>Automation_ID__c</fullName>
    <label>Automation ID</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Threshold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>