metadata/sf-prod/force-app/main/default/objects/QC_Rule__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Rules can be grouped into categories.  A QC Rule can belong to a single QC Rule Category. When LLM prompt gets constructed, the category prompt text comes before the rules that belong to that category.</description>
    <inlineHelpText>Rules can be grouped into categories.  A QC Rule can belong to a single QC Rule Category. When LLM prompt gets constructed, the category prompt text comes before the rules that belong to that category.</inlineHelpText>
    <label>Category</label>
    <referenceTo>QC_Rule_Category__c</referenceTo>
    <relationshipLabel>QC Rules</relationshipLabel>
    <relationshipName>QC_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>