metadata/sf-prod/force-app/main/default/objects/QC_Rule__c/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <description>Context to use in the AI prompt</description>
    <inlineHelpText>Context to use in the AI prompt</inlineHelpText>
    <label>Context</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>