metadata/sf-prod/force-app/main/default/objects/QC_Rule__c/fields/Enforced__c.field-meta.xml
<CustomField>
    <fullName>Enforced__c</fullName>
    <defaultValue>true</defaultValue>
    <description>QC Rule Result record will be created for this QC Rule only when this flag is set to true</description>
    <inlineHelpText>The rule will be evaluated only if this checkbox is enabled</inlineHelpText>
    <label>Enforced</label>
    <type>Checkbox</type>
</CustomField>