metadata/sf-prod/force-app/main/default/objects/QC_Rule__c/fields/Enforced_On__c.field-meta.xml
<CustomField>
    <fullName>Enforced_On__c</fullName>
    <label>Enforced On</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Work_Unit_Types</valueSetName>
    </valueSet>
</CustomField>