metadata/sf-prod/force-app/main/default/objects/QC_Rule__c/fields/Grader_Type__c.field-meta.xml
<CustomField>
    <fullName>Grader_Type__c</fullName>
    <label>Grader Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>AutoAI</fullName>
                <default>true</default>
                <label>AutoAI</label>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>