metadata/sf-prod/force-app/main/default/objects/QC_Rule__c/fields/Grading_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Grading_Criteria__c</fullName>
    <description>Grading Criteria to use in the AI prompt</description>
    <inlineHelpText>Grading Criteria to use in the AI prompt</inlineHelpText>
    <label>Grading Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>