metadata/sf-prod/force-app/main/default/objects/QC_Rule__c/fields/Grading_Order__c.field-meta.xml
<CustomField>
    <fullName>Grading_Order__c</fullName>
    <description>Specifies a position of the rule in the final AI prompt (compared to other rules). A rule with a minimal number appears first in the prompt.</description>
    <inlineHelpText>Specifies a position of the rule in the final AI prompt (compared to other rules). A rule with a minimal number appears first in the prompt.</inlineHelpText>
    <label>Grading Order</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>