metadata/sf-prod/force-app/main/default/objects/QC_Rule__c/fields/Metric_Field_Path__c.field-meta.xml
<CustomField>
    <fullName>Metric_Field_Path__c</fullName>
    <label>Metric Field Path</label>
    <length>100</length>
    <type>Text</type>
</CustomField>