metadata/sf-prod/force-app/main/default/objects/QC_Rule__c/fields/Training_Guideline__c.field-meta.xml
<CustomField>
    <fullName>Training_Guideline__c</fullName>
    <label>Training Guideline</label>
    <type>Url</type>
</CustomField>