metadata/sf-prod/force-app/main/default/objects/QC_Rule__c/fields/Upper_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Upper_Threshold__c</fullName>
    <label>Upper Threshold</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>