metadata/sf-prod/force-app/main/default/objects/QC_Rule__c/fields/Why_is_this_rule_important__c.field-meta.xml
<CustomField>
    <fullName>Why_is_this_rule_important__c</fullName>
    <label>Why is this rule important?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>