metadata/sf-prod/force-app/main/default/objects/QC_Rule__c/validationRules/Upper_Threshold_greater_than_Lower.validationRule-meta.xml
<ValidationRule>
    <fullName>Upper_Threshold_greater_than_Lower</fullName>
    <active>true</active>
    <description>Upper Threshold must be greater than Lower Threshold</description>
    <errorConditionFormula>ISPICKVAL( Automation_ID__c, &apos;Threshold&apos; ) &amp;&amp; NOT(ISNULL(Upper_Threshold__c) || ISNULL(Lower_Threshold__c)) &amp;&amp; (Upper_Threshold__c &lt;= Lower_Threshold__c)</errorConditionFormula>
    <errorMessage>Upper Threshold must be greater than Lower Threshold</errorMessage>
</ValidationRule>