metadata/sf-prod/force-app/main/default/objects/QC_Rule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Enforced__c</columns>
    <columns>Category_Label__c</columns>
    <columns>Description__c</columns>
    <columns>Enforced_On__c</columns>
    <columns>Grader_Type__c</columns>
    <columns>Automation_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>