metadata/sf-prod/force-app/main/default/objects/QC_Rule__c/listViews/Enabled.listView-meta.xml
<ListView>
    <fullName>Enabled</fullName>
    <columns>Category_Label__c</columns>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Enforced__c</columns>
    <columns>Description__c</columns>
    <columns>Enforced_On__c</columns>
    <columns>Context__c</columns>
    <columns>Grading_Criteria__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Enforced__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Renewal Call Rules - Enabled</label>
</ListView>