metadata/sf-prod/force-app/main/default/objects/QC_Rule__c/listViews/Exclude_Default_Rules.listView-meta.xml
<ListView>
    <fullName>Exclude_Default_Rules</fullName>
    <booleanFilter>1 OR 2 OR 3 OR 4 OR 5</booleanFilter>
    <columns>NAME</columns>
    <columns>Category_Label__c</columns>
    <columns>Enforced__c</columns>
    <columns>Description__c</columns>
    <columns>Why_is_this_rule_important__c</columns>
    <columns>Grader_Type__c</columns>
    <columns>Enforced_On__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category_Label__c</field>
        <operation>equals</operation>
        <value>Platinum</value>
    </filters>
    <filters>
        <field>Category_Label__c</field>
        <operation>equals</operation>
        <value>AI</value>
    </filters>
    <filters>
        <field>Category_Label__c</field>
        <operation>equals</operation>
        <value>Prime</value>
    </filters>
    <filters>
        <field>Category_Label__c</field>
        <operation>equals</operation>
        <value>Terms</value>
    </filters>
    <filters>
        <field>Category_Label__c</field>
        <operation>equals</operation>
        <value>Next Steps</value>
    </filters>
    <label>Renewal Call QC</label>
</ListView>